# qpyconf

./: .env  .gitignore  README.md  pdm.toml  pyproject.toml  settings.toml
.github/workflows/: ci.yml
docs/: installation.md  usage.md
scripts/: cleanup.sh
src/qpyconf/: __init__.py  config.py
tests/: test_qpyconf_config.py  test_qpyconf_pydantic_cases.py
